@@ -34,6 +34,7 @@ ChangeLog
 [+] * Added man pages for gammu-smsd(1), gammu-smsdrc(5) and gammurc(5).
 [+] * SMSD can now natively run as a Windows service (bug #451).
 [+] * SMSD backend services debugging can be now enabled by DebugService.
+[-] * Proper reconnecting support for MySQL.
     
 20081219 - 1.22.1
 
